<?xml version="1.0"?>
<package format="2">
  <name>matrix_determinant</name>
  <version>0.0.0</version>
  <description>The matrix_determinant package</description>

  <maintainer email="t-grifon@yandex.ru">Grigory</maintainer>

  <license>TODO</license>

  <author email="t-grifon@yandex.ru">Grigory</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>    
  </export>
</package>
